# DesignPatterns

./: .gitignore  CMakeLists.txt  DesignPatterns_VisualStudio.sln  DesignPatterns_VisualStudio.vcxproj  README.md  design_patterns  main.cpp
command/: Application.cpp  Application.hpp  CMakeLists.txt  CmdFileOpen.cpp  CmdFileOpen.hpp  CmdOpenLeftFile.cpp  CmdOpenLeftFile.hpp  CmdOpenRightFile.cpp  CmdOpenRightFile.hpp  CmdQuit.hpp  Command.cpp  Command.hpp  DiffDocument.hpp  Document.cpp  Document.hpp  MacroCommand.cpp  MacroCommand.hpp  OpenCommand.cpp  OpenCommand.hpp  PasteCommand.cpp  PasteCommand.hpp
composite/: CMakeLists.txt  Cabinet.hpp  Card.cpp  Chassis.cpp  Chassis.hpp  CompositeEquipment.cpp  CompositeEquipment.hpp  Equipment.hpp  FloppyDisk.cpp  FloppyDisk.hpp
decorator/: CMakeLists.txt  ConcreteComponentTextObject.cpp  Decorator.hpp  RedColorDecorator.hpp  VisualComponent.hpp
interpreter/: AndExp.cpp  AndExp.hpp  BooleanExp.cpp  BooleanExp.hpp  Context.hpp  OrExp.cpp  VariableExp.cpp
observer/: AnalogClock.cpp  AnalogClock.hpp  ClockTimer.cpp  ClockTimer.hpp  DigitalClock.cpp  DigitalClock.hpp  Observer.cpp  Observer.hpp  Subject.hpp
src/: CMakeLists.txt  main.cpp
src/command/: Application.cpp  CMakeLists.txt  CmdFileOpen.cpp  CmdFileOpen.hpp  CmdQuit.cpp  Command.cpp  DiffDocument.cpp
src/composite/: Bus.cpp  Bus.hpp  Cabinet.cpp  Card.hpp  Equipment.cpp
src/decorator/: BorderDecorator.cpp  BorderDecorator.hpp  ConcreteComponentTextObject.hpp  Decorator.cpp  RedColorDecorator.cpp
src/interpreter/: AndExp.cpp  AndExp.hpp  BooleanExp.cpp  Context.cpp  Context.hpp  NotExp.hpp  OrExp.cpp  OrExp.hpp  VariableExp.cpp  VariableExp.hpp
src/interpreter-bool/: BooleanExp.hpp  Constant.cpp  Constant.hpp  Context.cpp  NotExp.cpp  OrExp.cpp  OrExp.hpp  VariableExp.cpp  VariableExp.hpp
src/observer/: AnalogClock.cpp  CMakeLists.txt  ClockTimer.cpp  ClockTimer.hpp  DigitalClock.hpp  Observer.hpp  Subject.cpp
src/strategy/: CMakeLists.txt  Composition.cpp  Compositor.cpp  Compositor.hpp  TriangularCompositor.hpp
strategy/: ArrayCompositor.cpp  ArrayCompositor.hpp  Composition.hpp  TriangularCompositor.cpp
